--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,19 +1,20 @@
-name: iOS CI Workflows
-
+name: iOS develop workflow
 on:
   push:
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
-
 jobs:
   build:
     name: Build and Test default scheme using any available iPhone simulator
-    runs-on: macos-latest
-
+    runs-on: macos-15
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest
       - name: Set Default Scheme
         run: |
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
