--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,4 +1,4 @@
-name: iOS CI(develop Branch)
+name: iOS CI (develop Branch)
 on:
   push:
     branches: [ "develop" ]
@@ -15,22 +15,19 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest
-      - name: Set Default Scheme
+      - name: List Schemes
         run: |
-          scheme_list=$(xcodebuild -list -json | tr -d "\n")
-          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
-          echo $default | cat >default
-          echo Using default scheme: $default
+          xcodebuild -list -project *.xcodeproj
       - name: Build
         env:
-          scheme: ${{ 'default' }}
+          scheme: PetApp
           platform: ${{ 'iOS Simulator' }}
         run: |
           # 가장 간단한 방법 - 하드코딩된 기본 시뮬레이터 사용
           xcodebuild build-for-testing -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,name=Any iOS Simulator Device"
       - name: Test
         env:
-          scheme: ${{ 'default' }}
+          scheme: PetApp
           platform: ${{ 'iOS Simulator' }}
         run: |
           # 가장 간단한 방법 - 하드코딩된 기본 시뮬레이터 사용
