--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,4 +1,4 @@
-name: iOS CI (develop Branch)
+name: iOS CI (Develop Branch)
 on:
   push:
     branches: [ "develop" ]
@@ -15,20 +15,20 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest
-      - name: List Schemes
+      - name: List available destinations
         run: |
-          xcodebuild -list -project *.xcodeproj
+          xcodebuild -showdestinations -project *.xcodeproj -scheme PetApp
       - name: Build
         env:
           scheme: PetApp
           platform: ${{ 'iOS Simulator' }}
         run: |
-          # 가장 간단한 방법 - 하드코딩된 기본 시뮬레이터 사용
-          xcodebuild build-for-testing -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,name=Any iOS Simulator Device"
+          # 특정 iPhone 시뮬레이터를 사용
+          xcodebuild build-for-testing -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,id=dvtdevice-DVTiOSDeviceSimulatorPlaceholder-iphonesimulator:placeholder"
       - name: Test
         env:
           scheme: PetApp
           platform: ${{ 'iOS Simulator' }}
         run: |
-          # 가장 간단한 방법 - 하드코딩된 기본 시뮬레이터 사용
-          xcodebuild test-without-building -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,name=Any iOS Simulator Device"
+          # 특정 iPhone 시뮬레이터를 사용
+          xcodebuild test-without-building -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,id=dvtdevice-DVTiOSDeviceSimulatorPlaceholder-iphonesimulator:placeholder"
