--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -7,10 +7,14 @@ on:
 jobs:
   build:
     name: Build and Test default scheme using any available iPhone simulator
-    runs-on: macos-latest  # macos-15 대신 macos-latest 사용
+    runs-on: macos-14
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '16.2'
       - name: Set Default Scheme
         run: |
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
@@ -19,15 +23,13 @@ jobs:
           echo Using default scheme: $default
       - name: Build
         env:
-          scheme: ${{ 'PetApp' }}
+          scheme: PetApp
           platform: ${{ 'iOS Simulator' }}
         run: |
-          # 간단한 대체 방식
           xcodebuild build-for-testing -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,OS=latest"
       - name: Test
         env:
-          scheme: ${{ 'PetApp' }}
+          scheme: PetApp
           platform: ${{ 'iOS Simulator' }}
         run: |
-          # 간단한 대체 방식
           xcodebuild test-without-building -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,OS=latest"
