--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -15,21 +15,17 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '16.2'
-      - name: Set Default Scheme
-        run: |
-          scheme_list=$(xcodebuild -list -json | tr -d "\n")
-          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
-          echo $default | cat >default
-          echo Using default scheme: $default
       - name: Build
         env:
           scheme: PetApp
           platform: ${{ 'iOS Simulator' }}
         run: |
-          xcodebuild build-for-testing -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,OS=latest"
+          # 특정 iPhone 시뮬레이터 ID를 직접 사용
+          xcodebuild build-for-testing -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,name=iPhone 15 Pro,id=3250F3FE-9EB6-42AB-98B3-5D53F4B39F8C"
       - name: Test
         env:
           scheme: PetApp
           platform: ${{ 'iOS Simulator' }}
         run: |
-          xcodebuild test-without-building -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,OS=latest"
+          # 특정 iPhone 시뮬레이터 ID를 직접 사용
+          xcodebuild test-without-building -scheme "$scheme" -project *.xcodeproj -destination "platform=$platform,name=iPhone 15 Pro,id=3250F3FE-9EB6-42AB-98B3-5D53F4B39F8C"
