--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -7,13 +7,17 @@ on:
 jobs:
   deploy-to-testflight:
     name: Build and Deploy to TestFlight
-    runs-on: macos-latest
+    runs-on: macos-14
     
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
       
-      # Swift 패키지 캐싱
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '16.2'
+      
       - name: Cache Swift packages
         uses: actions/cache@v3
         with:
@@ -22,12 +26,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-spm-
       
-      # Xcode 버전 확인
       - name: Check Xcode version
         run: |
           xcodebuild -version
       
-      # 프로젝트 및 스킴 자동 감지
       - name: Find Project and Scheme
         run: |
           project_file=$(find . -name "*.xcodeproj" | head -n 1)
@@ -53,7 +55,6 @@ jobs:
             exit 1
           fi
       
-      # App Store Connect API 키 설정
       - name: Setup App Store Connect API Key
         env:
           APP_STORE_CONNECT_API_KEY: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
@@ -63,7 +64,6 @@ jobs:
           mkdir -p ~/private_keys
           echo -n "$APP_STORE_CONNECT_API_KEY" > ~/private_keys/AuthKey_$APP_STORE_CONNECT_API_KEY_ID.p8
       
-      # Apple 계정 인증
       - name: Setup Apple Developer Authentication
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
@@ -73,18 +73,12 @@ jobs:
           xcrun notarytool store-credentials "notarytool-profile" --apple-id "$APPLE_ID" --password "$APPLE_ID_PASSWORD" --team-id "$APPLE_TEAM_ID" || true
           xcrun altool --store-password-in-keychain-item "AC_PASSWORD" -u "$APPLE_ID" -p "$APPLE_ID_PASSWORD" || true
       
-      # 앱 빌드 및 아카이브
       - name: Build App
         env:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           BUNDLE_IDENTIFIER: ${{ secrets.BUNDLE_IDENTIFIER }}
         run: |
-          # 빌드 번호 증가 (선택 사항)
-          # build_number=$(xcrun agvtool what-version -terse)
-          # new_build_number=$((build_number + 1))
-          # xcrun agvtool new-version -all $new_build_number
-          
-          # 아카이브 생성
+          # 아카이브 생성 - CODE_SIGNING_ALLOWED=NO 제거
           xcodebuild archive \
             -project "$PROJECT_FILE" \
             -scheme "$DEFAULT_SCHEME" \
@@ -95,7 +89,6 @@ jobs:
             CODE_SIGN_IDENTITY="Apple Distribution" \
             CODE_SIGN_STYLE=Automatic
       
-      # 자동 서명용 ExportOptions.plist 생성
       - name: Create Export Options Plist
         env:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
@@ -120,7 +113,6 @@ jobs:
           </plist>
           EOL
       
-      # IPA 생성
       - name: Create IPA
         run: |
           xcodebuild -exportArchive \
@@ -128,7 +120,6 @@ jobs:
             -exportOptionsPlist ExportOptions.plist \
             -exportPath build
       
-      # TestFlight에 업로드
       - name: Upload to TestFlight
         uses: apple-actions/upload-testflight-build@v1
         with:
