--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -7,17 +7,19 @@ on:
 jobs:
   deploy-to-testflight:
     name: Build and Deploy to TestFlight
-    runs-on: macos-14
+    runs-on: macos-14  # 특정 macOS 버전 지정
     
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
       
+      # Xcode 버전 명시적 설정
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.2'
+          xcode-version: '16.2'  # 프로젝트와 호환되는 Xcode 버전 지정
       
+      # Swift 패키지 캐싱
       - name: Cache Swift packages
         uses: actions/cache@v3
         with:
@@ -26,10 +28,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-spm-
       
+      # Xcode 버전 확인
       - name: Check Xcode version
         run: |
           xcodebuild -version
       
+      # 프로젝트 및 스킴 찾기 - 수정된 부분
       - name: Find Project and Scheme
         run: |
           project_file=$(find . -name "*.xcodeproj" | head -n 1)
@@ -40,21 +44,15 @@ jobs:
             echo "PROJECT_FILE=$project_file" >> $GITHUB_ENV
             echo "Using project: $project_name ($project_file)"
             
-            # 스킴 리스트 가져오기 시도
-            schemes=$(xcodebuild -project "$project_file" -list | grep -A 10 "Schemes:" | grep -v "Schemes:" | grep -v '^$' | sed 's/^[ \t]*//')
-            if [ -n "$schemes" ]; then
-              default_scheme=$(echo "$schemes" | head -n 1)
-              echo "DEFAULT_SCHEME=$default_scheme" >> $GITHUB_ENV
-              echo "Using scheme: $default_scheme"
-            else
-              echo "DEFAULT_SCHEME=$project_name" >> $GITHUB_ENV
-              echo "Using scheme: $project_name (fallback to project name)"
-            fi
+            # 메인 스킴 이름을 프로젝트 이름과 동일하게 설정
+            echo "DEFAULT_SCHEME=$project_name" >> $GITHUB_ENV
+            echo "Using scheme: $project_name"
           else
             echo "No .xcodeproj file found"
             exit 1
           fi
       
+      # App Store Connect API 키 설정
       - name: Setup App Store Connect API Key
         env:
           APP_STORE_CONNECT_API_KEY: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
@@ -64,6 +62,7 @@ jobs:
           mkdir -p ~/private_keys
           echo -n "$APP_STORE_CONNECT_API_KEY" > ~/private_keys/AuthKey_$APP_STORE_CONNECT_API_KEY_ID.p8
       
+      # Apple 계정 인증
       - name: Setup Apple Developer Authentication
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
@@ -73,22 +72,25 @@ jobs:
           xcrun notarytool store-credentials "notarytool-profile" --apple-id "$APPLE_ID" --password "$APPLE_ID_PASSWORD" --team-id "$APPLE_TEAM_ID" || true
           xcrun altool --store-password-in-keychain-item "AC_PASSWORD" -u "$APPLE_ID" -p "$APPLE_ID_PASSWORD" || true
       
+      # 앱 빌드 및 아카이브 - Automatic 코드 서명 설정
       - name: Build App
         env:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           BUNDLE_IDENTIFIER: ${{ secrets.BUNDLE_IDENTIFIER }}
         run: |
-          # 아카이브 생성 - CODE_SIGNING_ALLOWED=NO 제거
+          # 아카이브 생성 - CODE_SIGN_IDENTITY 변경
           xcodebuild archive \
             -project "$PROJECT_FILE" \
             -scheme "$DEFAULT_SCHEME" \
             -archivePath build/app.xcarchive \
             -destination "generic/platform=iOS" \
             -configuration Release \
+            -allowProvisioningUpdates \
             DEVELOPMENT_TEAM=$APPLE_TEAM_ID \
-            CODE_SIGN_IDENTITY="Apple Distribution" \
+            CODE_SIGN_IDENTITY="Apple Development" \
             CODE_SIGN_STYLE=Automatic
       
+      # 자동 서명용 ExportOptions.plist 생성
       - name: Create Export Options Plist
         env:
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
@@ -109,17 +111,22 @@ jobs:
               <false/>
               <key>uploadSymbols</key>
               <true/>
+              <key>provisioningProfiles</key>
+              <dict/>
           </dict>
           </plist>
           EOL
       
+      # IPA 생성
       - name: Create IPA
         run: |
           xcodebuild -exportArchive \
             -archivePath build/app.xcarchive \
             -exportOptionsPlist ExportOptions.plist \
-            -exportPath build
+            -exportPath build \
+            -allowProvisioningUpdates
       
+      # TestFlight에 업로드
       - name: Upload to TestFlight
         uses: apple-actions/upload-testflight-build@v1
         with:
